# tiny-tiny-computer

./: .pre-commit-config.yaml  Dockerfile  README.md  assemble_and_execute.py  gen.py  pyproject.toml  requirements.txt  run.py  sample.asm  sample_flatenned.asm  sample_flatenned.lst  test.sh
.devcontainer/: Dockerfile  devcontainer.json
assembler/: __init__.py  main.py
assembler/assembler/: assemble.py  config.py  pass_one.py  pass_two.py  utils.py
linker/: linker.py
macro_processor/: __init__.py  process.py
macro_processor/samples/: multiple_calls.asm  multiple_calls_flatenned.asm  nested_macros.asm  nested_macros_flatenned.asm  recursive.asm
tests/instructions/: test_add.py  test_addr.py  test_and_instruction.py  test_clear.py  test_comp.py  test_compr.py  test_div.py  test_divr.py  test_j.py  test_jeq.py  test_jgt.py  test_jlt.py  test_jsub.py  test_lda.py  test_ldb.py  test_ldch.py  test_ldl.py  test_lds.py  test_ldt.py  test_ldx.py  test_mul.py  test_mulr.py  test_or_instruction.py  test_rmo.py  test_rsub.py  test_shiftl.py  test_shiftr.py  test_sta.py  test_stb.py  test_stch.py  test_stl.py  test_sts.py  test_stt.py  test_stx.py  test_sub.py  test_subr.py  test_tix.py  test_tixr.py
tiny_tiny_computer/machine/: instruction_mapper.py  memory.py  registers.py  run_fibonacci.py  sic.py
tiny_tiny_computer/machine/gui/: __init__.py  actions.py  components.py  popup.py
tiny_tiny_computer/machine/instructions/: add.py  addr.py  and_instruction.py  clear.py  comp.py  compr.py  div.py  divr.py  j.py  jeq.py  jgt.py  jlt.py  jsub.py  lda.py  ldb.py  ldch.py  (+22 more)
